Merged With Main Added AbstractFactory and changed the type parameters to use mostly enums to be compatible with the parser